<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/layout"
    tools:context="nl0882275jaar2kw4quizdroid.hr.cmi.httpstudent.quizdroid.CreateAccount">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:ems="10"
        android:id="@+id/register_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:singleLine="true" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/register_gender"
        android:layout_below="@+id/register_age"
        android:layout_alignParentStart="true">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:id="@+id/register_male" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female"
            android:id="@+id/register_female"
            android:checked="false" />

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_age"
        android:inputType="number"
        android:layout_below="@+id/register_name"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_age" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password"
        android:id="@+id/textView"
        android:layout_below="@+id/register_gender"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/confirm_password"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="9"
        android:id="@+id/register_confirm_password"
        android:layout_alignBottom="@+id/textView2"
        android:labelFor="@+id/register_confirm_password"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:id="@+id/button_register"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="9"
        android:id="@+id/register_password"
        android:layout_above="@+id/textView2"
        android:labelFor="@+id/register_password"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
