<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/layout"
    tools:context="nl0882275jaar2kw4quizdroid.hr.cmi.httpstudent.quizdroid.LoginAccount">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_name"
        android:hint="@string/hint_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password"
        android:hint="@string/password"
        android:layout_below="@+id/login_name"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/login_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:id="@+id/button_login"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp" />
</RelativeLayout>
